added dynamic className

--- a/react_lifecycle_forms/src/components/add-item-component/addItem.css
+++ b/react_lifecycle_forms/src/components/add-item-component/addItem.css
@@ -1,7 +1,12 @@
 .addItem{
     width: 90%;
     margin: auto;
+    background-color: dodgerblue;
+}
 
+.extra{
+    padding: 10px;
+    border: thick solid red;
 }
 
 .addItem input{
